// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npcPageBuilder should build monster infobox with combat level 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|members = Yes
|combat = 100
|size = 2
|examine = 
|hitpoints = 100
|att = 200
|def = 300
|mage = 400
|range = 500
|id = 1
}}
[[File:name chathead.png|left]]
'''name'''"
`;

exports[`npcPageBuilder should build npc infobox without combat level 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|members = Yes
|combat = 1
|examine = 
|id = 1
}}
[[File:name chathead.png|left]]
'''name'''"
`;

exports[`npcPageBuilder should build npc page with chathead when has chatheadModels 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|members = Yes
|combat = 1
|examine = 
|id = 1
}}
[[File:name chathead.png|left]]
'''name'''"
`;

exports[`npcPageBuilder should build npc page with transcript 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|members = Yes
|combat = 1
|examine = 
|id = 1
}}
[[File:name chathead.png|left]]
'''name'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder should build npc page without chathead when no chatheadModels 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|members = Yes
|combat = 1
|examine = 
|id = 1
}}
'''name'''"
`;

exports[`npcPageBuilder should strip HTML tags from NPC name in page content 1`] = `
"{{New Content}}
{{Infobox Monster
|name = Tornado
|image = [[File:Tornado.png|120px]]
|members = Yes
|combat = 1
|examine = 
|id = 1
}}
[[File:Tornado chathead.png|left]]
'''Tornado'''"
`;

exports[`npcPageBuilder should use beta id when Context.beta is true 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|members = Yes
|combat = 1
|examine = 
|id = beta1
}}
[[File:name chathead.png|left]]
'''name'''"
`;
